tdf#155526 Add Period to trend line equation

Insert Period value earlier to have it ready for representation
Allow Moving average equation in dialog UI

Change-Id: I1d20572c39462e60b60ab7eec1f174a3cf934d4a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153094
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
(cherry picked from commit dc03f59374d4fc74dd44ddedc903bb9c00a74bb7)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153755
Reviewed-by: Laurent Balland <laurent.balland@mailo.fr>